# VidMap

./: .gitignore  README.md  pyproject.toml  requirements.txt
examples/: vidmap.yaml
src/vidmap/: __init__.py  analysis.py  api.py  cli.py  config.py  core.py  indexing.py  ingest.py  models.py  search.py  storage.py  utils.py
src/vidmap/static/: index.html
tests/: test_basic.py
